--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.15.7",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^4.0.0",
+    "sass-loader": "^10.1.1",
+    "vue-slider-component": "^3.2.14",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "autoprefixer": "^10.3.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -29,9 +38,23 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.17.0",
+    "postcss": "^8.3.6",
+    "precss": "^4.0.0",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0"
-  }
+  },
+  "description": "## Build Setup",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chloe9855/iaproject.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chloe9855/iaproject/issues"
+  },
+  "homepage": "https://github.com/chloe9855/iaproject#readme"
 }
