--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^4.0.0",
     "sass-loader": "^10.1.1",
+    "vue-plain-pagination": "^0.3.0",
     "vue-slider-component": "^3.2.14",
-    "vue-sweetalert2": "^5.0.2"
+    "vue-sweetalert2": "^5.0.2",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
