--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "vue2-datepicker": "^3.10.1"
   },
   "description": "## Build Setup",
   "main": ".eslintrc.js",
