[新增]地圖初始化完成 / 測量功能完成 / 地圖縮小&放大&回到全圖 / 比例尺&游標座標列

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "javascript",
     "vue"
   ],
-  "vetur.validation.template": false
+  "vetur.validation.template": false,
+  "eslint.workingDirectories": [
+    {"mode": "auto"}
+  ]
 }
