--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
+    "html2canvas": "^1.3.2",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
     "postcss-import": "^14.0.2",
@@ -22,6 +23,7 @@
     "postcss-scss": "^4.0.0",
     "sass-loader": "^10.1.1",
     "vue-draggable-resizable": "^2.3.0",
+    "vue-html2canvas": "0.0.4",
     "vue-plain-pagination": "^0.3.0",
     "vue-select": "^3.13.0",
     "vue-slider-component": "^3.2.14",
@@ -29,7 +31,6 @@
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
@@ -37,11 +38,11 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.17.0",
+    "eslint-plugin-vue": "^7.19.1",
     "postcss": "^8.3.6",
     "precss": "^4.0.0",
     "prettier": "^2.3.2",
