--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
     "html2canvas": "^1.3.2",
+    "jszip": "^3.7.1",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
     "postcss-import": "^14.0.2",
