--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,10 @@
       "@/*": ["./*"],
       "~~/*": ["./*"],
       "@@/*": ["./*"]
-    }
+    },
+    "types": [
+      "@nuxt/types"
+    ],
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
