--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "lint": "npm run lint:js && npm run lint:style"
   },
   "dependencies": {
+    "@nuxt/types": "^2.15.8",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
+    "dayjs": "^1.10.7",
     "html2canvas": "^1.3.2",
     "jszip": "^3.7.1",
     "node-sass": "^4.14.1",
